--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    min-height:100vh;
     }
 
 img {
@@ -32,7 +33,7 @@ ul {
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 30px;
-   
+       
 }
 .header{ 
     max-width: 1100px;
@@ -44,6 +45,7 @@ ul {
     display: flex;
     justify-content: space-between;
    align-items: center;
+   min-height:100%;
   }
 
 
