--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    min-height:100vh;
+    min-height: 100vh;
     }
 
 img {
@@ -39,13 +39,14 @@ ul {
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 30px;
+    min-height:100%;
 }
 .header .container {
     background: blue;
     display: flex;
     justify-content: space-between;
    align-items: center;
-   min-height:100%;
+  
   }
 
 
@@ -92,6 +93,8 @@ ul {
     background: #011627;
     justify-content: space-between;
     max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 30px;
       
 }
 
