--- a/main.css
+++ b/main.css
@@ -29,18 +29,20 @@ ul {
     list-style-type: none;
 }
 
+.header{ 
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 30px;
+    height:100%;
+}
+
 .container {
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 30px;
        
 }
-.header{ 
-    max-width: 1100px;
-    margin: 0 auto;
-    padding: 0 30px;
-    min-height:100%;
-}
+
 .header .container {
     background: blue;
     display: flex;
