--- a/main.css
+++ b/main.css
@@ -5,10 +5,17 @@
 }
 
 body {
+    display: flex;
     font-family: Arial, Helvetica, sans-serif;
     min-height: 100vh;
+    background-color: red;
+    flex-direction: column;
+    
     }
+.main {
 
+    flex: 1;
+}
 img {
     max-width: 25%;
     padding: 20px;
@@ -33,14 +40,14 @@ ul {
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 30px;
-    height:100%;
+    ;
 }
 
 .container {
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 30px;
-       
+    
 }
 
 .header .container {
@@ -48,7 +55,7 @@ ul {
     display: flex;
     justify-content: space-between;
    align-items: center;
-  
+   
   }
 
 
@@ -91,15 +98,18 @@ ul {
 }
 
 .flex-container {
-    display: flex;
+   
     background: #011627;
-    justify-content: space-between;
-    max-width: 1100px;
-    margin: 0 auto;
-    padding: 0 30px;
+  
+    
       
 }
-
+.flex-container .container {
+    display: flex;
+       margin: 0 auto;
+    padding: 0 30px;
+    justify-content: space-between;
+}
 
 .footer {
     text-decoration: none;
