--- a/main.css
+++ b/main.css
@@ -63,6 +63,7 @@ ul {
     background: #011627;
     color: #fff;
     height: 60px;
+   
 }
 
 .navbar .logo {
@@ -70,15 +71,26 @@ ul {
     font-weight: bold;
 
 }
+
+.hamburger {
+    font-size: 30px;
+    cursor: pointer;
+    display: none;
+}
 .navbar .container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     height: 100%;
+    
+    
+   
 }
 
 .navbar ul {
     display: flex;
+    
 }
 
 .navbar ul li {
@@ -122,12 +134,27 @@ ul {
         
     }    
 
-    @media (max-width: 768px) {
+    @media (max-width: 767px) {
         .flex-container {
             flex-direction: column;
             align-items: center;
         }
+.hamburger {
+    display:block;
+}
+ul.nav {
+    display: none;
+   
 
+}
+ul.nav.show{
+    display: flex;
+    flex-direction:column;
+    width: 100%;
+    align-items: center;
+    
+    
+}
         .header .container {
             flex-direction: column;
             align-items: center
